use regular expressions and update README

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <form id="leap-year">
       <div class="form-group">
-        <label for="year">Enter a year and find out if it's a leap year:</label>
+        <label for="year">Pig Latin:</label>
         <input id="year" type="text">
       </div>
 
